# mongo-rag

./: .env.example  .gitignore  CLAUDE.md  FILTERING_GUIDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  nextsteps.md  package-lock.json
apps/api/: .dockerignore  .env.example  Dockerfile  fly.api.toml  fly.worker.toml  pyproject.toml
apps/api/scripts/: entrypoint.sh  seed_data.py  setup_indexes.py
apps/api/src/: cli.py  main.py  worker.py
apps/api/src/auth/: __init__.py  api_keys.py  profiles.py
apps/api/src/core/: authz.py  database.py  dependencies.py  deps.py  middleware.py  observability.py  postgres.py  principal.py  prompts.py  providers.py  rate_limit_dep.py  request_logging.py  security.py  settings.py  supabase_auth.py  tenant.py
apps/api/src/eval/: __init__.py  dataset.py  judge.py  metrics.py  report.py  run.py  runner.py
apps/api/src/migrations/: __init__.py  cli.py  runner.py
apps/api/src/models/: __init__.py  analytics.py  api.py  billing.py  bot.py  conversation.py  document.py  invitation.py  search.py  tenant.py  usage.py  user.py  webhook.py
apps/api/src/routers/: analytics.py  auth.py  billing.py  bots.py  chat.py  documents.py  health.py  ingest.py  keys.py  stripe_webhooks.py  team.py  usage.py  webhooks.py
apps/api/src/services/: agent.py  analytics.py  api_key.py  auth.py  billing.py  bot.py  chat.py  citations.py  conversation.py  plan.py  query_rewrite.py  rate_limit.py  rerank.py  (+8 more)
apps/api/tests/: __init__.py  conftest.py  test_agent.py  test_analytics_router.py  test_analytics_service.py  test_api_key_router.py  test_api_key_service.py  test_api_keys_pg.py  test_auth_router.py  test_auth_service.py  test_authz.py  test_backup_scripts.py  test_billing_models.py  test_billing_router.py  test_billing_service.py  test_blobstore_base.py  test_blobstore_factory.py  test_blobstore_filesystem.py  test_blobstore_supabase.py  test_blobstore_uri.py  test_bot_branding_gate.py  test_bot_router.py  test_bot_service.py  test_bot_widget_config.py  test_chat_request_bot_id.py  test_chat_router.py  test_chat_service.py  test_chat_sse_middleware_stack.py  test_chunker_config.py  test_citations.py  test_conversation.py  test_database_indexes.py  test_dependencies_bool.py  test_documents_router.py  test_documents_service.py  test_embedder.py  test_font_conformance.py  test_health.py  test_ingest_router.py  test_ingestion_service.py  (+31 more)
(+346 files in other folders)
